# embedded_rust_panic

./: Cargo.toml  README.md  openocd.cfg  openocd.gdb  simple.gdb
src/: main.rs
