[package]
name = "simple_panic"
version = "0.1.0"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-itm = "0.4.1"
cortex-m-rt = "0.6.11"
cortex-m = "^0.6.0"


